[package]
name = "typelisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotel = "1.0.2"                         # Collection Data-structure to associate values with keys
cranelift = "0.98.1"                                # Umbrella for commonly-used cranelift crates
